# gentic_algo

./: .gitignore  CMakeLists.txt  geneticalgo.cpp  geneticalgo.h  individual.cpp  individual.h  individualfactory.cpp  individualfactory.h  main.cpp  population.cpp  population.h
